truncate component is working correctly now

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -61,7 +61,7 @@ noscript {
 /* Text content. */
 
 :is(p, li) {
-  line-height: 1.5;
+  line-height: var(--base-line-height);
 }
 
 /* ---------------------------------------- */
